# 5.24.3

5.24.3/: CMakeLists.txt  INSTALL_GUIDE.md  README.md  create_deep_pit_simulation.sh  deep_pit_visualization.py  deep_pit_visualization_ros2.py  fix_ros_sources.sh  install_ros2_humble.sh  install_ros_noetic.sh  install_simple.sh  package.xml  robot_config.rviz  setup.py  start_http_server.bat  start_ros1.ps1  start_ros1.sh  start_ros2.sh
5.24.3/deep_pit_inspection/: __init__.py  __main__.py  visualization_node.py
5.24.3/deep_pit_simulation/: README.md  package.xml  setup.py
5.24.3/deep_pit_simulation/config/: robot_control.yaml  robot_controllers.yaml
5.24.3/deep_pit_simulation/deep_pit_simulation/: __init__.py  gt_recorder.py  simulation_node.py  trajectory_publisher.py
5.24.3/deep_pit_simulation/launch/: gazebo.launch.py  gazebo_xacro.launch.py  inspection_complete.launch.py  inspection_robot.launch.py  recording.launch.py
5.24.3/deep_pit_simulation/rviz/: simulation.rviz
5.24.3/deep_pit_simulation/urdf/: inspection_robot.urdf  inspection_robot.xacro  inspection_robot_complete.xacro  materials.xacro  robot.xacro  robot_base.xacro  sensors.xacro
5.24.3/deep_pit_simulation/worlds/: deep_pit.world  deep_pit_spiral_ramp.world
5.24.3/launch/: deep_pit.launch.py
5.24.3/resource/: deep_pit_inspection
5.24.3/rviz/: deep_pit_config.rviz
